text overlap fix in various lang

--- a/src/components/ui/ui.module.scss
+++ b/src/components/ui/ui.module.scss
@@ -155,7 +155,7 @@
     }
   }
   &.small {
-    padding-inline: 20px;
+    padding-inline: 15px;
     line-height: 35px;
     font-weight: 700;
     font-size: 16px;
